[gd_scene load_steps=8 format=3 uid="uid://brwujh2js58bg"]

[ext_resource type="Script" path="res://scripts/spawn_enemy.gd" id="1_22v2d"]
[ext_resource type="PackedScene" uid="uid://buuftkd8l2mih" path="res://scenes/laser.tscn" id="2_6cp11"]
[ext_resource type="Texture2D" uid="uid://b4fxdx5fpge64" path="res://graphics/icon.png" id="2_pfunk"]
[ext_resource type="PackedScene" uid="uid://gd88hgyd8c0a" path="res://scenes/ship_enemy.tscn" id="3_yas14"]
[ext_resource type="PackedScene" uid="uid://c474xtmrb3qpp" path="res://scenes/hp_bar.tscn" id="4_b7lck"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n05l3"]
size = Vector2(80, 141)

[sub_resource type="SpriteFrames" id="SpriteFrames_2c7h1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pfunk")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}]

[node name="RigidBody2D" type="RigidBody2D" groups=["enemys"]]
collision_layer = 5
collision_mask = 5
gravity_scale = 0.0
max_contacts_reported = 20
contact_monitor = true
script = ExtResource("1_22v2d")
laser_scene = ExtResource("2_6cp11")
spawned_enemy = ExtResource("3_yas14")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_n05l3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(1.25312, 2.19906)
sprite_frames = SubResource("SpriteFrames_2c7h1")
animation = &"Default"

[node name="HPBar" parent="." instance=ExtResource("4_b7lck")]
offset_left = 46.0
offset_top = 43.0
offset_right = 123.0
offset_bottom = 72.0
rotation = -1.5708
scale = Vector2(1.12405, 0.446387)
metadata/_edit_use_anchors_ = true

[node name="Laser_Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Spawn_Timer" type="Timer" parent="." groups=["enemys"]]
wait_time = 20.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Laser_Timer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="Spawn_Timer" to="." method="_on_spawn_timer_timeout"]
